# clang-test

./: CMakeLists.txt
src/: gen.cc
